add some information on index.html
немного добавил информации в индекс html, там будет находится основная панель

--- a/crypan/main/templates/main/index.html
+++ b/crypan/main/templates/main/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panel</title>
 </head>
 <body>
-    
+   <h1>Its CryPanel!</h1>
+   <h3>your nickname: {{user.username}}</h3>
 </body>
 </html>
