--- a/crypan/main/templates/base.html
+++ b/crypan/main/templates/base.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Churkastan.com</title>
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link href="https://fonts.cdnfonts.com/css/manrope" rel="stylesheet">
+   <title>Churkastan.com</title>
 </head>
 <body>
     
+    <div class="left-nav">
+        <div class="nav-item logo">
+            LOGO
+        </div>
 
+        <div class="nav-item">
+            <i class="fas fa-server"></i>
+        </div>
+
+        <div class="nav-item">
+            <i class="fas fa-link"></i>
+        </div>
+
+        <div class="nav-item">
+            <i class="fa-regular fa-user"></i>
+        </div>
+    </div>
     
     {% block content %}
     {% endblock %}
