--- a/crypan/main/templates/login.html
+++ b/crypan/main/templates/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторизация</title>
+    <title>Auth</title>
     <link rel="stylesheet" href="/static/css/auth.css">
 </head>
 <body>
     <div class="auth">
         <div class="header">
-            Авторизация
+            Auth
         </div>
         <div class="message">
             <div class="error">
