--- a/crypan/main/templates/base.html
+++ b/crypan/main/templates/base.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link href="https://fonts.cdnfonts.com/css/manrope" rel="stylesheet">
-   <title>Churkastan.com</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.css" integrity="sha512-8D+M+7Y6jVsEa7RD6Kv/Z7EImSpNpQllgaEIQAtqHcI0H6F4iZknRj0Nx1DCdB+TwBaS+702BGWYC0Ze2hpExQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Churkastan.com</title>
 </head>
 <body>
     
@@ -18,24 +17,72 @@
             LOGO
         </div>
 
-        <div class="nav-item">
-            <i class="fas fa-server"></i>
+        <div class="nav-item {% if request.path == '/domains' %}active{% endif %}">
+            <a href="{% url 'domains' %}">
+                <i class="fas fa-server"></i>
+            </a>
+        </div>
+
+        <div class="nav-item {% if request.path == '/links' %}active{% endif %}">
+            <a href="{% url 'links' %}">
+                <i class="fas fa-link"></i>
+            </a>
         </div>
 
         <div class="nav-item">
-            <i class="fas fa-link"></i>
-        </div>
-
-        <div class="nav-item">
-            <i class="fa-regular fa-user"></i>
+            <div class="dropdown">
+                <button class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fa-regular fa-user"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#changePassword"><i class="fa-solid fa-key"></i>&nbsp;Сменить пароль</a></li>
+                  <li><div class="dropdown-link"></div></li>
+                  <li><a class="dropdown-item" href="/logout"><i class="fa-solid fa-door-open"></i>&nbsp;Выйти</a></li>
+                </ul>
+              </div>
         </div>
     </div>
     
     {% block content %}
     {% endblock %}
 
+
+    <div class="modal fade" id="changePassword" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Cмена пароля</h5>
+              <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="input-block">
+                    <span class="input-label">Введите старый пароль</span>
+                    <input type="password" placeholder="Старый пароль" class="form-control" id="last-password">
+                </div>
+    
+                <div class="modal-line"></div>
+    
+                <div class="input-block">
+                    <span class="input-label">Введите новый пароль</span>
+                    <input type="password" placeholder="Новый пароль" class="form-control" id="newpass1">
+                </div>
+
+                <div class="input-block">
+                    <span class="input-label">Повторите новый пароль</span>
+                    <input type="password" placeholder="Повтор нового пароля" class="form-control" id="newpass2">
+                </div>
+    
+            </div>
+            <div class="modal-footer">
+              <button type="button" id="addDomain" class="modal-button">Продолжить</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.min.js" integrity="sha512-zlWWyZq71UMApAjih4WkaRpikgY9Bz1oXIW5G0fED4vk14JjGlQ1UmkGM392jEULP8jbNMiwLWdM8Z87Hu88Fw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="/static/js/main.js"></script>
 </html>
