--- a/crypan/main/templates/domains.html
+++ b/crypan/main/templates/domains.html
@@ -1,31 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add sites</title>
-</head>
-<body>
-    <h1>Add domens</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <h3>Tip shablona:</h3>
-        <select name="shablon" id="shab">
-            {% if user.loco == False %}
-            <option>No shablons!</option>
-            {% endif %}
-            {% if user.loco %}
-            
-            <option>
-            Loco(file hosting)
-            </option>
-            {% endif %}
-        </select>
-        <h3>Domain name</h3>
-        <input type="text" name='name_domain'placeholder="Name of domain">
-        <button type='submit'>Go!</button>
-        {{message}}
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<div class="content">
+    <div class="content-table">
+        <table>
+            <thead>
+                <td>
+                    <span>ID</span>
+                </td>
+                <td>
+                    <span>Домен</span>
+                </td>
+                <td>
+                    <span>Статус</span>
+                </td>
+                <td>
+                    <span>Дата создания</span>
+                </td>
+                <td>
+                    <button class="table-button" data-bs-toggle="modal" data-bs-target="#addDomainModal">
+                        <i class="fa-solid fa-plus white-shadow"></i>
+                    </button>
+                </td>
+            </thead>
+
+            <tbody>
+                {% for item in domains %}
+                <tr id="{{ item.id }}">
+                    <td>{{ item.id }}</td>
+                    <td>{{ item.name }}</td>                    
+                    <td>{{ item.status }}</td>
+                    <td class="date">{{ item.created_at|date:"Y.m.d g:i" }}</td>
+                    <td>
+                        {% if item.status == 'Ожидание привязки' %}
+                        <button class="checkConnect btn">
+                            <i class="fa-solid fa-arrows-rotate"></i>
+                        </button>
+                        {% endif %}
+                        <button type="button" class="btn deleteDomain btn-delete"></button>
+                    </td>
+                </tr>
+
+                {% endfor %}
+            </tbody>
+        </table>        
+    </div>
+</div>
+
+<div class="modal fade" id="addDomainModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Добавление домена</h5>
+          <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="input-block">
+                <span class="input-label">Укажите ваш домен и поддомен, если он необходим</span>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">https://</span>
+                    <input id="podDomain" type="text" class="form-control" placeholder="(необязательно)">
+                    <span class="input-group-text">.</span>
+                    <input id="name" type="text" class="form-control" placeholder="example.com">
+                </div>
+            </div>
+
+            <div class="modal-line"></div>
+
+            <div class="input-block">
+                <span class="input-label">Общий:</span>
+                <select class="form-select" id="publicDomain">
+                    <option selected value="no">Нет</option>
+                    <option value="yes">Да</option>
+                </select>
+            </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="addDomain" class="modal-button">Продолжить</button>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
