--- a/crypan/main/templates/base.html
+++ b/crypan/main/templates/base.html
@@ -14,7 +14,7 @@
     
     <div class="left-nav">
         <div class="nav-item logo">
-            LOGO
+            CRY
         </div>
 
         <div class="nav-item {% if request.path == '/domains' %}active{% endif %}">
