--- a/crypan/main/templates/domains.html
+++ b/crypan/main/templates/domains.html
@@ -10,13 +10,13 @@
                     <span>ID</span>
                 </td>
                 <td>
-                    <span>Домен</span>
+                    <span>Domain</span>
                 </td>
                 <td>
-                    <span>Статус</span>
+                    <span>Status</span>
                 </td>
                 <td>
-                    <span>Дата создания</span>
+                    <span>Created</span>
                 </td>
                 <td>
                     <button class="table-button" data-bs-toggle="modal" data-bs-target="#addDomainModal">
