--- a/crypan/main/templates/links.html
+++ b/crypan/main/templates/links.html
@@ -10,19 +10,19 @@
                     <span>ID</span>
                 </td>
                 <td>
-                    <span>Ссылка</span>
+                    <span>Link</span>
                 </td>
                 <td>
-                    <span>Дизайн</span>
+                    <span>Design</span>
                 </td>
                 <td>
-                    <span>Статистика</span>
+                    <span>Statistic</span>
                 </td>
                 <td>
-                    <span>Коментарий</span>
+                    <span>Comment</span>
                 </td>
                 <td>
-                    <span>Дата создания</span>
+                    <span>Created</span>
                 </td>
                 <td>
                     <button class="table-button" data-bs-toggle="modal" data-bs-target="#addLink">
@@ -53,7 +53,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Добавление ссылки</h5>
+          <h5 class="modal-title">Add Link</h5>
           <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
