--- a/softra/main/templates/main/index.html
+++ b/softra/main/templates/main/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
     <div class="navbar">
-        <div class="logo">LOCO</div>
+        <a class="logo" href='{% url "main" %}'>LOCO</a>
         <div class="menu">
             <div class="menu_item">Main</div>
             <div class="menu_item">Vault</div>
